# scotti-gen

./: README.md  meson.build
app/: meson.build
src/: meson.build
